<resources>
    <string name="app_name">Examen</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="get_new">Get new</string>
    <string name="create_new">Create new</string>
    <string name="login">Login</string>
    <string name="log_logo">log_logo</string>
    <string name="login_text">Login</string>
</resources>